--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           echo "builder ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
           mkdir -p /var/cache/distfiles
           chown builder:builder /var/cache/distfiles
+          chown -R builder:builder .
         shell: alpine.sh --root {0}
 
       - name: Import signing key
