Add proper sha512 checksums for prusalink sources

--- a/packages/prusalink/APKBUILD
+++ b/packages/prusalink/APKBUILD
@@ -138,10 +138,10 @@ EOF
 }
 
 sha512sums="
-SKIP  prusalink-0.8.1.tar.gz
-SKIP  prusalink.initd
-SKIP  prusalink.confd
-SKIP  prusalink.ini
-SKIP  prusalink.pre-install
-SKIP  prusalink.post-install
+c4339a0a5f9cb988d03e94ea5d64ec306401333d51a58651450a97acaf4fe401472e4fd4db438582e4d97d69de301c83f5a5be36d54df8614477c3923a0606b7  prusalink-0.8.1.tar.gz
+8ff7f6ea13f36e24ac26b888897dc19d49437dd53b6f700b1485b8f35f65b60795ef102ea53468c56b7c9fcd3065e9b432714f0b4adef4f82e4e65d609d8f299  prusalink.initd
+2d6eef72808d1af3676c9efe46e923e4e505c1e6490ae24662befade564527e71e68d8ccad28ce8ffaafcc76a0a2c793e617585efe227a2bdd4d9a7272c0342d  prusalink.confd
+1ceb1a61b1ba4cc6ccd51d4d9baa7f707f1d6c00c3b03c1ac118f44c4aac8ecbc6d7c54510d86463041b12c2a6bfda50fb9d4c5452d41d2c5dfe4329668e214c  prusalink.ini
+5694f50c3a888d7f9bae2dc95595934d34195c6c368cc145245dad9047a3eeadc76d7d96508edec383caaa31cdacf1e7e7fe9ef56fadcc398c727c15bc0d98f7  prusalink.pre-install
+5d2b709670881714fb35f6ebb95d8acfc087cd1f5495c762279838f6098ee377e586e827d5136a20544d49097dc4761777ddb08926e30ed2264f472b6dd39ac6  prusalink.post-install
 "
