--- a/packages/otbr/APKBUILD
+++ b/packages/otbr/APKBUILD
@@ -39,9 +39,12 @@ unpack() {
 
 build() {
 	cd "$srcdir/$pkgname-$pkgver"
+	# Disable -Werror=maybe-uninitialized due to false positive in GCC
+	# when building OpenThread with certain optimization levels
 	cmake -B build -G Ninja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS -Wno-maybe-uninitialized" \
 		-DBUILD_TESTING=OFF \
 		-DOTBR_DBUS=OFF \
 		-DOTBR_MDNS=avahi \
