--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,13 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
+    inputs:
+      rebuild_all:
+        description: 'Rebuild all packages (ignore change detection)'
+        required: false
+        default: 'false'
+        type: boolean
 
 jobs:
   detect-changes:
@@ -20,12 +27,20 @@ jobs:
       - name: Detect changed packages
         id: changes
         run: |
+          # Check for manual rebuild request
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ inputs.rebuild_all }}" = "true" ]; then
+            echo "Manual rebuild of all packages requested"
+            echo "packages=$(ls -d packages/*/APKBUILD | xargs -n1 dirname | xargs -n1 basename | tr '\n' ' ')" >> $GITHUB_OUTPUT
+            echo "build_all=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             BASE=${{ github.event.pull_request.base.sha }}
           else
             BASE=${{ github.event.before }}
           fi
-          # Handle initial commit or force push
+          # Handle initial commit, force push, or workflow_dispatch
           if ! git cat-file -e "$BASE" 2>/dev/null; then
             echo "Building all packages (no valid base commit)"
             echo "packages=$(ls -d packages/*/APKBUILD | xargs -n1 dirname | xargs -n1 basename | tr '\n' ' ')" >> $GITHUB_OUTPUT
@@ -121,8 +136,14 @@ jobs:
       - name: Collect packages
         run: |
           mkdir -p _site/${{ matrix.arch }}
-          # Copy newly built packages (overwrites any downloaded ones)
-          cp -r /home/builder/packages/*/* _site/${{ matrix.arch }}/ 2>/dev/null || true
+          # Copy newly built packages (abuild creates packages/{pkgname}/{arch}/)
+          # We need to copy the contents of the arch subdirectory
+          for pkgdir in /home/builder/packages/*/; do
+            if [ -d "$pkgdir${{ matrix.arch }}" ]; then
+              cp -v "$pkgdir${{ matrix.arch }}"/*.apk _site/${{ matrix.arch }}/ 2>/dev/null || true
+              cp -v "$pkgdir${{ matrix.arch }}"/APKINDEX.tar.gz _site/${{ matrix.arch }}/ 2>/dev/null || true
+            fi
+          done
           ls -la _site/${{ matrix.arch }}/ || echo "No packages in _site/${{ matrix.arch }}/"
         shell: alpine.sh --root {0}
 
@@ -161,6 +182,15 @@ jobs:
               arch=${dir#_site/packages-}
               mv "$dir" "_site/$arch"
               echo "Moved $dir to _site/$arch"
+            fi
+          done
+          # Flatten any nested arch directories (e.g., x86_64/x86_64/ -> x86_64/)
+          for arch_dir in _site/*/; do
+            arch=$(basename "$arch_dir")
+            if [ -d "$arch_dir$arch" ]; then
+              echo "Flattening nested $arch directory"
+              mv "$arch_dir$arch"/* "$arch_dir" 2>/dev/null || true
+              rmdir "$arch_dir$arch" 2>/dev/null || true
             fi
           done
           # Copy keys and index
