--- a/matter-server.yaml
+++ b/matter-server.yaml
@@ -1,12 +1,16 @@
 package:
   name: matter-server
   version: 8.1.2
-  epoch: 1
+  epoch: 2
   description: "Open Home Foundation Matter Server - WebSocket-based Matter controller"
   copyright:
     - license: Apache-2.0
+  options:
+    # Disable auto-detection which adds Wolfi-style python-3.12-base
+    no-depends: true
   dependencies:
     runtime:
+      - python3
       - libuv
       - zlib
       - json-c
@@ -15,6 +19,8 @@ package:
       - dbus-libs
       - libssl3
       - libcrypto3
+      - libgcc
+      - libstdc++
   target-architecture:
     - x86_64
     - aarch64
