--- a/matter-server.yaml
+++ b/matter-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: matter-server
   version: 8.1.2
-  epoch: 2
+  epoch: 3
   description: "Open Home Foundation Matter Server - WebSocket-based Matter controller"
   copyright:
     - license: Apache-2.0
@@ -29,6 +29,7 @@ package:
       - usrmerge
   scriptlets:
     pre-install: |
+      #!/bin/sh
       addgroup -S matter 2>/dev/null || true
       adduser -S -D -H -h /var/lib/matter-server -s /sbin/nologin -G matter \
         -g "Matter Server" matter 2>/dev/null || true
