--- a/otbr.yaml
+++ b/otbr.yaml
@@ -1,7 +1,7 @@
 package:
   name: otbr
   version: 0.3.0
-  epoch: 0
+  epoch: 1
   description: "OpenThread Border Router"
   copyright:
     - license: BSD-3-Clause
@@ -20,6 +20,7 @@ package:
       - usrmerge
   scriptlets:
     pre-install: |
+      #!/bin/sh
       addgroup -S otbr 2>/dev/null || true
       adduser -S -D -H -h /var/lib/otbr -s /sbin/nologin -G otbr \
         -g "OpenThread Border Router" otbr 2>/dev/null || true
