--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,8 +78,79 @@ jobs:
           path: packages/${{ matrix.arch }}
           if-no-files-found: ignore
 
-  build-matter-server:
+  build-chip-sdk:
     needs: build
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      fail-fast: true
+      matrix:
+        arch: [x86_64, aarch64]
+        include:
+          - arch: x86_64
+            runner: ubuntu-latest
+          - arch: aarch64
+            runner: ubuntu-24.04-arm
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: chainguard-dev/actions/setup-melange@main
+        with:
+          version: latest-release
+
+      - name: Setup signing key
+        run: |
+          echo "${{ secrets.ABUILD_PRIVKEY }}" > melange.pem
+          openssl rsa -in melange.pem -out packages@elohmeier.rsa -traditional 2>/dev/null || cp melange.pem packages@elohmeier.rsa
+          openssl rsa -in packages@elohmeier.rsa -pubout -out packages@elohmeier.rsa.pub
+          chmod 600 packages@elohmeier.rsa
+          rm -f melange.pem
+
+      - name: Setup cache directory
+        run: |
+          mkdir -p cache
+          sudo chmod 777 cache
+
+      - uses: actions/cache@v4
+        with:
+          path: cache
+          key: melange-chip-sdk-${{ matrix.arch }}-${{ hashFiles('chip-sdk.yaml') }}
+          restore-keys: |
+            melange-chip-sdk-${{ matrix.arch }}-
+
+      - name: Download zap-cli artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: packages-${{ matrix.arch }}-zap-cli
+          path: packages/${{ matrix.arch }}
+
+      - name: Generate local repo index
+        run: |
+          melange index \
+            --signing-key packages@elohmeier.rsa \
+            --arch ${{ matrix.arch }} \
+            -o packages/${{ matrix.arch }}/APKINDEX.tar.gz \
+            packages/${{ matrix.arch }}/*.apk
+
+      - name: Build chip-sdk
+        run: |
+          sudo melange build chip-sdk.yaml \
+            --arch ${{ matrix.arch }} \
+            --signing-key packages@elohmeier.rsa \
+            --keyring-append packages@elohmeier.rsa.pub \
+            --repository-append packages/ \
+            --out-dir packages/ \
+            --cache-dir cache/ \
+            --generate-index=false
+          sudo chown -R runner:runner packages/ cache/
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: packages-${{ matrix.arch }}-chip-sdk
+          path: packages/${{ matrix.arch }}
+          if-no-files-found: ignore
+
+  build-matter-server:
+    needs: [build, build-chip-sdk]
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: true
@@ -117,10 +188,10 @@ jobs:
           restore-keys: |
             melange-matter-server-${{ matrix.arch }}-
 
-      - name: Download zap-cli artifact
+      - name: Download chip-sdk artifact
         uses: actions/download-artifact@v4
         with:
-          name: packages-${{ matrix.arch }}-zap-cli
+          name: packages-${{ matrix.arch }}-chip-sdk
           path: packages/${{ matrix.arch }}
 
       - name: Generate local repo index
@@ -150,7 +221,7 @@ jobs:
           if-no-files-found: ignore
 
   publish:
-    needs: [build, build-matter-server]
+    needs: [build, build-chip-sdk, build-matter-server]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     permissions:
